syntax = "proto3";

option csharp_namespace = "ExamApp";

package client;

service ClientService {
  // Получить одного клиента по ID
  rpc GetClient(GetClientRequest) returns (GetClientResponse);

  // Создать нового клиента
  rpc CreateClient(CreateClientRequest) returns (Empty);

  // Обновить клиента по ID
  rpc UpdateClient(UpdateClientRequest) returns (Empty);

  // Удалить клиента по ID
  rpc DeleteClient(DeleteClientRequest) returns (Empty);

  // Получить всех клиентов (ничего не принимает, возвращает список)
  rpc GetAllClients(Empty) returns (GetAllClientsResponse);
}

// Запрос для получения одного клиента
message GetClientRequest {
  string id = 1;
}

// Ответ при получении одного клиента
message GetClientResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string address = 4;
  string phone = 5;
}

// Запрос при создании клиента
message CreateClientRequest {
  string first_name = 1;
  string last_name = 2;
  string address = 3;
  string phone = 4;
}

// Запрос при обновлении клиента
message UpdateClientRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string address = 4;
  string phone = 5;
}

// Запрос при удалении клиента
message DeleteClientRequest {
  string id = 1;
}

// Ответ при получении всех клиентов
message GetAllClientsResponse {
  repeated GetClientResponse clients = 1;
}

// Пустое сообщение для тех случаев, 
// когда метод не принимает никакого входа
message Empty {}
